methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:7: error: ':' expected but ',' found.
def move(nbPas, versLAvant) {
              ^FlowerPot:52: error: identifier expected but '}' found.
}
^